# deposit-tracker

./: .bandit  .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  plan.md  pyproject.toml
.claude/agents/: github-pr-reviewer.md
.claude/commands/: pr-reviewer.md
.github/workflows/: bandit.yml
src/models/: coupon.py  receipt.py  receipt_item.py  store.py  user.py
src/repositories/: INTERFACES.md  coupon_repository.py  receipt_repository.py  store_repository.py  user_repository.py
src/services/: coupon_service.py  llm_receipt_parser.py  ocr_service.py  receipt_parser.py  receipt_parser_factory.py  receipt_parser_interface.py  regex_receipt_parser.py  split_service.py  transaction_service.py
src/web/: app.py
tests/: test_store_model.py  test_store_repository.py  test_user_model.py  test_user_repository.py
tests/admin/: test_admin_authentication.py  test_admin_store_management.py  test_admin_transaction_history.py  test_admin_user_management.py
tests/coupon/: test_coupon_model.py  test_coupon_repository.py  test_coupon_service.py
tests/receipt/: test_receipt_item_model.py  test_receipt_model.py  test_receipt_repository.py
tests/services/: test_llm_receipt_parser.py  test_ocr_service.py  test_receipt_parser.py  test_receipt_parser_factory.py  test_split_service.py  test_transaction_service.py
tests/store/: test_store_mapping.py  test_store_repository.py  test_store_repository_extras.py  test_store_validation.py
tests/user/: test_user_mapping.py  test_user_model.py  test_user_repository.py  test_user_repository_extras.py  (+1 more)
(+19 files in other folders)
