[project]
name = "deposit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-vision>=3.10.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests"]
# Alternative approach: skip B101 (assert_used) only for test files
# skips = ["B101"]
